<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputFragment">

    <TextView
        android:id="@+id/input_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/input_screen_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/input_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:lineSpacingExtra="2sp"
        android:text="@string/input_instructions"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_screen_title" />

    <Spinner
        android:id="@+id/hotel_picker"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/blue_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_instructions" />

    <!-- <Button
        android:id="@+id/arrival_date_button"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/blue_primary"
        android:text="@string/arrival_button_text"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/arrival_time_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hotel_picker" />

    <Button
        android:id="@+id/arrival_time_button"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/blue_secondary"
        android:text="@string/time_of_arrival"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/arrival_date_button"
        app:layout_constraintTop_toBottomOf="@+id/hotel_picker" />

    <Button
        android:id="@+id/departure_date_button"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/blue_primary"
        android:text="@string/departure_button_text"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/departure_time_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrival_date_button" />

    <Button
        android:id="@+id/departure_time_button"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/blue_secondary"
        android:text="@string/time_of_departure"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/departure_date_button"
        app:layout_constraintTop_toBottomOf="@+id/arrival_time_button" /> -->

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-15dp"
        android:layout_marginTop="-14dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:scaleX="0.7"
        android:scaleY="0.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hotel_picker" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-15dp"
        android:layout_marginEnd="-15dp"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hotel_picker" />

    <TextView
        android:id="@+id/number_of_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/number_of_people"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePicker" />

    <EditText
        android:id="@+id/input_people"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input_field"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_of_people" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/back_arrow" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/red"
        android:onClick="addReservation"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_people" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/light_gray"
        android:text="@string/reset"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_button" />


</androidx.constraintlayout.widget.ConstraintLayout>